--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         </div>
 
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h3 class="orange-highlight">Become world's no. 1 developer</h3>
+            <p>This book will demonstrate how to use a wide variety of neural network architectures, such as Convolutional Neural Networks, Recurrent Neural Networks, and advanced training paradigms such as reinforcement learning. It also provides clear explanations of what is actually happening with the neural network in the training process.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/mynetwork/">Download</a>
+
+        </div>
+
+    </section>
     
     
 </body>
